--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
   </head>
-  <body>
+  <body unresolved>
     <my-app appTitle="my app"></my-app>
     <noscript>
       Please enable JavaScript to view this website.
@@ -113,5 +113,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <!-- Built with love using PWA Starter Kit -->
     <script type="module" src="src/components/my-app.js" crossorigin></script>
+    <script>
+      addEventListener('load', () => document.body.classList.remove('unresolved'));
+    </script>
   </body>
 </html>
